# damaian

./: .env.example  .gitignore  Cargo.toml  README.md  SECURITY.md  ai_coding_assistant_must_have.md  ai_coding_assistant_specification.md  package.json
.github/workflows/: macos-dmg.yml
crates/damaian-cli/: Cargo.toml
crates/desktop-app/: Cargo.toml  build.rs  tauri.conf.json
crates/desktop-app/capabilities/: default.json
crates/desktop-app/permissions/autogenerated/: damaian_desktop_bootstrap.toml
crates/desktop-app/src/: main.rs
crates/desktop-shell/: Cargo.toml
crates/desktop-shell/src/: keychain.rs  lib.rs  main.rs
crates/desktop-shell/static/: app.js  index.html  style.css
crates/workspace-engine/: Cargo.toml
crates/workspace-engine/src/: audit.rs  chat.rs  command_policy.rs  command_runner.rs  config.rs  context_manager.rs  diff.rs  edit.rs  embeddings.rs  error.rs  file_access.rs  git_service.rs  hash.rs  ignore.rs  index_cache.rs  indexer.rs  language.rs  lib.rs  model.rs  patch_engine.rs  path_policy.rs  render.rs  secret_scanner.rs  session.rs  validation.rs  vector_index.rs  workspace_engine.rs
crates/workspace-engine/tests/: foundation.rs  semantic_search.rs
docs/: MACOS_INSTALLATION.md  USER_GUIDE.md
docs/specs/: 01_response_formatting.md  02_semantic_search.md  03_structured_tool_calling.md  04_hunk_level_patch_apply.md  05_clickable_file_references.md  README.md
scripts/: create-updater-manifest.mjs  enable-updater-artifacts.mjs  sync-version.mjs
src/: index.js
src/audit/: audit-log.js
src/commands/: command-policy.js  command-runner.js
src/config/: defaults.js
src/context/: context-manager.js
src/core/: errors.js  hash.js
src/diff/: unified-diff.js
src/git/: git-service.js
src/model/: mock-model-adapter.js  model-adapter.js  openai-compatible-adapter.js
src/orchestrator/: workspace-engine.js
src/patch/: patch-engine.js
src/security/: secret-scanner.js
src/workspace/: file-access.js  (+4 more)
test/: command-policy.test.js  context-manager.test.js  indexer.test.js  patch-engine.test.js  path-policy.test.js  secret-scanner.test.js
(+2 files in other folders)
