[package]
name = "desktop-app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Native Damaian desktop wrapper"

[[bin]]
name = "damaian-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
desktop-shell = { path = "../desktop-shell" }
tauri = { version = "2", features = [] }
