[package]
name = "desktop-shell"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "damaian-desktop-shell"
path = "src/main.rs"

[dependencies]
getrandom = "0.3"
serde_json = "1.0.150"
workspace-engine = { path = "../workspace-engine" }
